Fix changing brush collapsing color picker, stickers thumb list, and text selection on firefox

--- a/src/scss/partials/_mediaEditor.scss
+++ b/src/scss/partials/_mediaEditor.scss
@@ -32,13 +32,8 @@
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    max-width: 1780px;
+    max-width: 1682px;
     max-height: 1080px;
-
-    @media screen and (min-width: 1780px) {
-      border-radius: 16px;
-      overflow: hidden;
-    }
 
     display: flex;
   }
@@ -531,17 +526,22 @@
     height: 48px;
 
     position: absolute;
-    top: var(--current-scroll-top);
+    top: calc(100% + 8px);
     left: 0;
     width: 100%;
 
     background-color: #212121;
 
-    z-index: 1;
-  }
+    z-index: 2;
 
-  [data-has-scroll="true"] &__stickers-thumb-list-scrollable {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+    &--hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+    &--has-scroll {
+      top: 100%;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+    }
   }
 
   &__stickers-thumb-list {
